--- a/views/partials/dummyfood.ejs
+++ b/views/partials/dummyfood.ejs
@@ -1,7 +1,7 @@
 
 <div id="card-group">
     <div class="card-image" style="width: 18rem;">
-        <img src="/img/placeholder.jpg" width="70" height="80"
+        <img ondragstart="return false;" draggable="false" src="/img/placeholder.jpg" width="70" height="80"
         style="object-fit:cover;border-radius:10px;padding-top:1px;">
     <div class="card-body">
       <h5 class="font-black">Card title</h5>
