--- a/views/partials/dummyhome.ejs
+++ b/views/partials/dummyhome.ejs
@@ -1,5 +1,5 @@
 <div class = "homecard">
-    <img src="/img/placeholder.jpg" class="homecardimg" alt="">
+    <img ondragstart="return false;" draggable="false" src="/img/placeholder.jpg" class="homecardimg" alt="">
     <div class = "homecardimgbody">
         <h1 class = "homecardtitle">ILOILO CITY</h1>
         <p class = "homecardinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore ad necessitatibus eaque numquam rem molestias placeat ratione dolor sequi, debitis sit totam dolorum accusantium cupiditate modi, consequatur exercitationem sed culpa.</p>
