--- a/views/partials/dummyhorizontal.ejs
+++ b/views/partials/dummyhorizontal.ejs
@@ -1,6 +1,6 @@
 <div id="horizontal-card-group" class="horizontalcard">
     <div class="horizontalcardimg" style="width: 18rem;">
-        <img src="/img/placeholder.jpg" width="70" height="80"
+        <img ondragstart="return false;" draggable="false" src="/img/placeholder.jpg" width="70" height="80"
         style="object-fit:cover;border-radius:10px;padding-top:1px;">
     </div>
     <div class="card-body">
