--- a/views/partials/dummylist.ejs
+++ b/views/partials/dummylist.ejs
@@ -1,6 +1,6 @@
 <div id="uin-one-third-column">
     <div class="card">
-        <img src="/img/placeholder.jpg">
+        <img ondragstart="return false;" draggable="false" src="/img/placeholder.jpg">
     </div>
     <div class="card-body">
       <h5 class="font-black">ILOILO CITY</h5>
