--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -13,6 +13,7 @@
 <script defer src="/js/side-nav-bar.js"></script>
 <script defer src="/js/active-page.js"></script>
 <script defer src="/js/traffic-map.js"></script>
+<script defer src="/js/hide-info-link.js"></script>
 
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
