--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -12,22 +12,22 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/img/carousel1highlight.jpg" class="d-block w-100" alt="..." style="width:  600px;">
+        <img ondragstart="return false;" draggable="false" src="/img/carousel1highlight.jpg" class="d-block w-100" alt="..." style="width:  600px;">
       </div>
       <div class="carousel-item">
-        <img src="/img/carousel2highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">
+        <img ondragstart="return false;" draggable="false" src="/img/carousel2highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">
       </div>
       <div class="carousel-item">
-        <img src="/img/carousel3highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
+        <img ondragstart="return false;" draggable="false" src="/img/carousel3highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
       </div>
       <div class="carousel-item">
-        <img src="/img/carousel4highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
+        <img ondragstart="return false;" draggable="false" src="/img/carousel4highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
       </div>
       <div class="carousel-item">
-        <img src="/img/carousel5highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
+        <img ondragstart="return false;" draggable="false" src="/img/carousel5highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
       </div>
       <div class="carousel-item">
-        <img src="/img/carousel6highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
+        <img ondragstart="return false;" draggable="false" src="/img/carousel6highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
