--- a/views/partials/carouselhistory.ejs
+++ b/views/partials/carouselhistory.ejs
@@ -9,13 +9,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/img/carousel1history.jpg" class="d-block w-100" alt="..." style="width:  600px;">
+            <img ondragstart="return false;" draggable="false" src="/img/carousel1history.jpg" class="d-block w-100" alt="..." style="width:  600px;">
           </div>
           <div class="carousel-item">
-            <img src="/img/carousel2history.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">
+            <img ondragstart="return false;" draggable="false" src="/img/carousel2history.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">
           </div>
           <div class="carousel-item">
-            <img src="/img/carousel3history.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
+            <img ondragstart="return false;" draggable="false" src="/img/carousel3history.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicatorsHist" role="button" data-slide="prev">
